--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,42 +12,12 @@
 
 
 
+    <header>
+        <h1>Hello!</h1>
+        <h2>WELCOME TO QUIZ STORM</h2>
 
-
-
-    
-
-    <div class="container">
-
-        <div class="quiz-box">
-         <div id="quiz">
-            <div class="quiz-header">
-                <p id="progress">Question x of y</p>
-                <p id="count-down">0</p>
-            </div>
-            <p id="question">What is your name?</p>
-
-            <div class="buttons">
-                <button class="btn" id="btn0">
-                    A.<span id="choice0"></span>
-                </button>
-
-                <button class="btn" id="btn1">
-                    B. <span id="choice1"></span>
-                </button>
-
-                <button class="btn" id="btn2">
-                    C. <span id="choice2"></span>
-                </button>
-
-                <button class="btn" id="btn3">
-                    D. <span id="choice3"></span>
-                </button>
-            </div>
-         </div>
-        </div>
-    </div>
-
+        <a href="./xenz.html">Start Quiz</a>
+    </header>
 
 
     <div class="logos">
@@ -60,12 +30,6 @@
         <img src="./images/IMG_7275.PNG" >
         
     </div>
-
-
-
-    <script src="./script.js"></script>
-
-
 
 
 
