--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Hello!</h1>
         <h2>WELCOME TO QUIZ STORM</h2>
 
-        <a href="./xenz.html">Start Quiz</a>
+        <a href="./main.html">Start Quiz</a>
     </header>
 
 
